--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@pbe/react-yandex-maps": "^1.2.2",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
